--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                 2008 </span>
                         </div>
                         <div class="vd-section-content-holder">
-                            <span class="namn">Marks gymnasium (kunskapenhus)</span>
+                            <span class="namn">Marks gymnasium (kunskapens hus)</span>
                             <span class="titel">- Samhäll</span>
                             <span class="date-mobile">2005 -
                                 2008 </span>
@@ -295,7 +295,7 @@
                                 2010 </span>
                         </div>
                         <div class="vd-section-content-holder">
-                            <span class="namn">Marks gymnasium (kunskapenhus)</span>
+                            <span class="namn">Marks gymnasium (kunskapens hus)</span>
                             <span class="titel">- komvux</span>
                             <span class="date-mobile">2010 -
                                 2010 </span>
@@ -593,8 +593,8 @@
                     <div class="vd-section-holder">
                         <span class="text">
                             <div>Som person är jag ambitiös och lojal samt lägger stor tyngd i familj.</div>
-                            <div>På min fritid sitter jag mycket med Java. Java har det senaste väckt ett intresse för
-                                språket som bara växer och det är väldigt kul att se sina idéer komma till liv.
+                            <div>På min fritid sitter jag mycket med Java. Java har det senaste väckt ett större intresse hos mig
+                                som bara växer. Det är väldigt kul att se sina idéer komma till liv.
                             </div>
                             <div>Ni är mer än välkommna att kolla in min profil på Linkdin och Github.</div>
                             <div><br></div>
