--- a/index.html
+++ b/index.html
@@ -598,9 +598,9 @@
                             </div>
                             <div>Ni är mer än välkommna att kolla in min profil på Linkdin och Github.</div>
                             <div><br></div>
-                            <div class="länkar"> <a href="https://www.github.com/Gripencreutz">Github</a> &nbsp &nbsp
+                            <div class="länkar"> <a target="_blank" href="https://www.github.com/Gripencreutz">Github</a> &nbsp &nbsp
                                 &nbsp
-                                <a href="https://www.linkedin.com/in/simon-gripencreutz-174b20173/">Linkdin</a>
+                                <a target="_blank" href="https://www.linkedin.com/in/simon-gripencreutz-174b20173/">Linkdin</a>
                             </div>
                             <div><br></div>
                             <div></div>
