--- a/index.html
+++ b/index.html
@@ -170,6 +170,21 @@
                 <div class="vd-content-work">
                     <span class="vd-headings">
                         Arbetslivserfarenhet </span>
+                    
+                        <div class="vd-section-holder">
+                        <div class="vd-section-date-holder">
+                            <span class="datum">
+                                September 2019 - &nbsp; </span>
+                        </div>
+                        <div class="vd-section-content-holder">
+                            <span class="namn">Plejd</span>
+                            <span class="titel">- Internship</span>
+                            <span class="date-mobile">September 2019 - </span>
+                            <span class="text">
+                                <div>Arbetar med webb-frontend med verktyg så som React/Ionic React.</div>
+                            </span>
+                        </div>
+                    </div>
 
 
 
@@ -230,23 +245,6 @@
                         </div>
                     </div>
 
-
-
-
-                    <div class="vd-section-holder">
-                        <div class="vd-section-date-holder">
-                            <span class="datum">
-                                September 2019 - &nbsp; </span>
-                        </div>
-                        <div class="vd-section-content-holder">
-                            <span class="namn">Plejd</span>
-                            <span class="titel">- Internship</span>
-                            <span class="date-mobile">September 2019 - </span>
-                            <span class="text">
-                                <div>Arbetar med webb-frontend med verktyg så som React/Ionic React.</div>
-                            </span>
-                        </div>
-                    </div>
                 </div>
 
                 <!-- Education -->
@@ -616,7 +614,7 @@
                     <div class="vd-section-holder block-holder-margin">
 
                         <span class="titel">
-                            Referenser finns och lämnas vid efterfrågan </span>
+                            Plejd Personal Chef: Iman Habib - 0767000099 </span>
                         <br>
                         <br>
 
