--- a/index.html
+++ b/index.html
@@ -639,8 +639,8 @@
                     <div class="vd-section-holder">
                         <span class="text">
                             <div>Som person är jag ambitiös och lojal samt lägger stor tyngd i familj.</div>
-                            <div>På min fritid sitter jag mycket med Java. Java har det senaste väckt ett större intresse hos mig
-                                som bara växer. Det är väldigt kul att se sina idéer komma till liv.
+                            <div>På min fritid sitter jag mycket med React. React har det senaste väckt ett större intresse hos mig
+                                som bara växer och det är väldigt kul att se sina idéer komma till liv.
                             </div>
                             <div>Ni är mer än välkommna att kolla in min profil på Linkdin och Github.</div>
                             <div><br></div>
