--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <div class="vd-top-two">
                     <span class="vd-name">Simon Gripencreutz
                     </span>
-                    <span class="vd-title">Student i Java/webbutveckling</span>
+                    <span class="vd-title">studerande i Backend på Handelsakademin</span>
                 </div>
                 <div class="vd-top-three">
                     <span class="vd-top-adress">Bangatan 32 , 41464 Göteborg </span>
@@ -220,12 +220,12 @@
                         <div class="vd-section-holder">
                         <div class="vd-section-date-holder">
                             <span class="datum">
-                                September 2019 - &nbsp; </span>
+                                September 2019 - Augusti 2020 </span>
                         </div>
                         <div class="vd-section-content-holder">
                             <span class="namn">Plejd</span>
                             <span class="titel">- Internship</span>
-                            <span class="date-mobile">September 2019 - </span>
+                            <span class="date-mobile">September 2019 - Augusti 2020</span>
                             <span class="text">
                                 <div>Arbetar med webb-frontend med verktyg så som React/Ionic React.</div>
                             </span>
