--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
                         <div class="vd-section-holder">
                         <div class="vd-section-date-holder">
                             <span class="datum">
-                                September 2019 - Augusti 2020 </span>
+                                2019 - 2020 </span>
                         </div>
                         <div class="vd-section-content-holder">
                             <span class="namn">Plejd</span>
                             <span class="titel">- Internship</span>
-                            <span class="date-mobile">September 2019 - Augusti 2020</span>
+                            <span class="date-mobile">2019 - 2020</span>
                             <span class="text">
                                 <div>Arbetar med webb-frontend med verktyg så som React/Ionic React.</div>
                             </span>
