--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
                     <span class="vd-title">studerande i Backend på Handelsakademin</span>
                 </div>
                 <div class="vd-top-three">
-                    <span class="vd-top-adress">Bangatan 32 , 41464 Göteborg </span>
-                    <span class="vd-top-three-info">0736910231 </span><span class="vd-top-text-divider">|</span>
-                    <span class="vd-top-three-info">simon@gripencreutz.com </span>
+                    <span class="vd-top-adress">Armlängdsgatan 19 , 42172 Västra Frölunda </span>
+                    <span class="vd-top-three-info">0736910231</span><span class="vd-top-text-divider">|</span>
+                    <span class="vd-top-three-info">simon@gripencreutz.com</span>
 
                 </div>
             </div> <!-- vd-top-holder -->
@@ -202,10 +202,13 @@
                 <span class="vd-headings">
                     Sammanfattning </span>
                 <span class="text">
-                    <div>Efter en visit på kunskap/framtidsmässan i Göteborg insåg jag att programmering är mitt kall.
+                    <div>Efter en visit på kunskap/framtidsmässan i Göteborg insåg jag att programmering är mitt kall. 
                     </div>
-                    <div>Är inne på min sista termin av min utbildning i java/webb och är mer än taggad att få komma ut
-                        i arbetslivet.</div>
+                    <div>Jag har sedan tidigare gått igenom en Java/webb utbildning på Campus Mölndal. Men efter examen var Covid i fullgång vilket jag såg 
+                        som en fantastiskt tillfälle att utveckla min kunskaper.
+                        Är i nuläget på mitt första år inom Backend (C# .Net) på Handelsakademin. 
+                        Här stortrivs jag och känner mig lyckligt lottad till att få veta mer om backend världen.
+                    </div>
                 </span>
             </div>
 
