--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <span class="vd-title">Första året i Backend på Handelsakademin</span>
                 </div>
                 <div class="vd-top-three">
-                    <span class="vd-top-adress">Armlängdsgatan 19 , 42172 Västra Frölunda </span>
+                    <span class="vd-top-adress">Armlängdssgatan 19 , 42172 Västra Frölunda </span>
                     <span class="vd-top-three-info">0736910231</span><span class="vd-top-text-divider">|</span>
                     <span class="vd-top-three-info">simon@gripencreutz.com</span>
 
@@ -497,7 +497,7 @@
                             <div class="vd-section-holder">
                                 <div class="vd-section-date-holder-half cloud-align">
                                     <span class="datum">
-                                        <span class="bold">MVC</span>
+                                        <span class="bold">ASP.net/MVC</span>
                                         <span class="float-right">Bra</span>
                                     </span>
                                 </div>
